// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton for business themes renders styles correctly 1`] = `
.c5 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c5:hover {
  color: #1E861E;
  background-color: transparent;
}

.c5::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 16px;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:focus {
  outline: solid 3px #FFB500;
}

.c2:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c2:hover .c4 {
  color: #FFFFFF;
}

.c2 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c2 .c4 svg {
  margin-top: 0;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 16px;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  border-left-width: 0;
  padding: 0 10px;
}

.c3:focus {
  outline: solid 3px #FFB500;
}

.c3:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c3:hover .c4 {
  color: #FFFFFF;
}

.c3 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c3 .c4 svg {
  margin-top: 0;
}

.c1 + .c3 {
  margin-left: 0;
}

.c1 + .c3:focus {
  margin-left: -3px;
}

.c1 + .c3 .c4 {
  margin-left: 0;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
    type="button"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="c4 c5"
      data-component="icon"
      data-element="dropdown"
      disabled={false}
      fontSize="small"
      type="dropdown"
    />
  </button>
</div>
`;

exports[`SplitButton when the theme is set to Classic renders styles correctly 1`] = `
.c5 {
  display: inline-block;
  position: relative;
  color: #00805D;
  background-color: transparent;
  color: rgba(0,0,0,0.85);
  background-color: transparent;
}

.c5:hover {
  color: #00664A;
  background-color: transparent;
}

.c5::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.common-input__label--help .c5 {
  width: auto;
  height: auto;
}

.c5:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c5::before {
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c6:hover .c4 {
  color: #FFFFFF;
}

.c6 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c6 .c4 svg {
  margin-top: 0;
}

.c7 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c7 .c4 svg {
  margin-top: 0;
}

.c8 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c8 .c4 svg {
  margin-top: 0;
}

.c9:hover .c4 {
  color: #FFFFFF;
}

.c9 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c9 .c4 svg {
  margin-top: 0;
}

.c10:hover .c4 {
  color: #FFFFFF;
}

.c10 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c10 .c4 svg {
  margin-top: 0;
}

.c11:hover .c4 {
  color: #FFFFFF;
}

.c11 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c11 .c4 svg {
  margin-top: 0;
}

.c12:hover .c4 {
  color: #FFFFFF;
}

.c12:hover .c4 {
  color: rgba(0,0,0,0.3);
}

.c12 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c12 .c4 svg {
  margin-top: 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c2 .c4 {
  color: #255bc7;
}

.c2:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c2:active .c4 {
  color: #255bc7;
}

.c2:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2:hover .c4 {
  color: #ffffff;
}

.c2:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2:focus .c4 {
  color: #ffffff;
}

.c2:last-child {
  margin-right: 0;
}

.c2 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 18px;
}

.c2 .c4 svg {
  margin-top: 0;
}

.c13 > .c1 {
  margin: 0;
}

.c13 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c0 > .c1:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c14:hover .c4 {
  color: #FFFFFF;
}

.c14 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c14 .c4 svg {
  margin-top: 0;
}

.c1 + .c14 {
  margin-left: 0;
}

.c1 + .c14:focus {
  margin-left: -3px;
}

.c1 + .c14 .c4 {
  margin-left: 0;
}

.c15 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c15 .c4 svg {
  margin-top: 0;
}

.c1 + .c15 {
  margin-left: 0;
}

.c1 + .c15 .c4 {
  margin-left: 0;
}

.c16 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c16 .c4 svg {
  margin-top: 0;
}

.c1 + .c16 {
  margin-left: 0;
}

.c1 + .c16 .c4 {
  margin-left: 0;
}

.c17:hover .c4 {
  color: #FFFFFF;
}

.c17 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c17 .c4 svg {
  margin-top: 0;
}

.c17,
.c17 .c4 {
  color: #FFFFFF;
}

.c1 + .c17 {
  margin-left: 0;
}

.c1 + .c17:focus {
  margin-left: -3px;
}

.c1 + .c17 .c4 {
  margin-left: 0;
}

.c18:hover .c4 {
  color: #FFFFFF;
}

.c18:hover .c4 {
  color: rgba(0,0,0,0.3);
}

.c18 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c18 .c4 svg {
  margin-top: 0;
}

.c1 + .c18 {
  margin-left: 0;
}

.c1 + .c18:focus {
  margin-left: -3px;
}

.c1 + .c18 .c4 {
  margin-left: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
  border-left-width: 0;
  padding: 0 10px;
  z-index: 20;
}

.c3 .c4 {
  color: #255bc7;
}

.c3:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c3:active .c4 {
  color: #255bc7;
}

.c3:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c3:hover .c4 {
  color: #ffffff;
}

.c3:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c3:focus .c4 {
  color: #ffffff;
}

.c3:last-child {
  margin-right: 0;
}

.c3 .c4 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c3 .c4 svg {
  margin-top: 0;
}

.c1 + .c3 {
  margin-left: 0;
}

.c1 + .c3:focus {
  margin-left: -3px;
}

.c1 + .c3 .c4 {
  margin-left: 0;
}

.c3.c3,
.c1 + .c3:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c19 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c19 .c1:focus,
.c19 .c1:hover {
  background-color: #003F2E;
}

.c19 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c20 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c20 .c1:focus,
.c20 .c1:hover {
  background-color: #004372;
}

.c20 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c21 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c21 .c1:focus,
.c21 .c1:hover {
  background-color: #003F2E;
}

.c21 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c21 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c21 .c1:focus,
.c21 .c1:hover {
  background-color: #163777;
}

.c22 .c1 {
  background-color: #006300;
  border: 1px solid #006300;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c22 .c1:focus,
.c22 .c1:hover {
  background-color: #004400;
}

.c22 .c1 + .c23 .c1 {
  margin-top: 3px;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
    type="button"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="c4 c5"
      data-component="icon"
      data-element="dropdown"
      disabled={false}
      fontSize="small"
      type="dropdown"
    />
  </button>
</div>
`;
